[package]
name = "bloom-filter"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# aya = "0.10"
aya = { path = "../../../../dev/aya/aya", features=["async_tokio"] }
aya-log = "0.1"
bloom-filter-common = { path = "../bloom-filter-common", features=["user"] }
anyhow = "1.0.42"
bytes = "1"
clap = { version = "3.1", features = ["derive"] }
log = "0.4"
simplelog = "0.12"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
phf = { version = "0.10", features = ["macros"] }

[[bin]]
name = "bloom-filter"
path = "src/main.rs"
