[package]
name = "cgroup-sockopt-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
user = [ "aya" ]

[dependencies]
#aya = { git = "https://github.com/nak3/aya", branch = "add-cgroup-sockopt", optional=true }
#aya = { path = "../../../../dev/aya/aya", optional=true }
aya = { version = "0.10", optional=true }

[lib]
path = "src/lib.rs"
