[package]
name = "cgroup-sysctl-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/nak3/aya", branch = "add-cgroup-sysctl" }
# aya-bpf = { path = "../../../../dev/aya/bpf/aya-bpf" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya-log", branch = "main" }
cgroup-sysctl-common = { path = "../cgroup-sysctl-common" }

[[bin]]
name = "cgroup-sysctl"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
