[package]
name = "cgroup-sysctl"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { git = "https://github.com/nak3/aya", branch = "add-cgroup-sysctl", features=["async_tokio"] }
#aya = { path = "../../../../dev/aya/aya", features=["async_tokio"] }
aya-log = "0.1"
cgroup-sysctl-common = { path = "../cgroup-sysctl-common", features=["user"] }
anyhow = "1.0.42"
bytes = "1"
clap = { version = "3.1", features = ["derive"] }
log = "0.4"
simplelog = "0.12"
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "cgroup-sysctl"
path = "src/main.rs"
