[package]
name = "lwt-in-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-bpf-macros = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-bpf-cty = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
lwt-in-common = { path = "../lwt-in-common" }

[[bin]]
name = "lwt-in"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []

[patch.crates-io]
aya-bpf = { path = "../../../../dev/aya/bpf/aya-bpf" }
aya-bpf-macros = { path = "../../../../dev/aya/aya-bpf-macros" }
aya-bpf-cty = { path = "../../../../dev/aya/bpf/aya-bpf-cty" }
#aya-bpf = { git = "https://github.com/nak3/aya", branch = "add-lwt" }
[patch."https://github.com/aya-rs/aya"]
aya-bpf = { path = "../../../../dev/aya/bpf/aya-bpf" }
aya-bpf-macros = { path = "../../../../dev/aya/aya-bpf-macros" }
aya-bpf-cty = { path = "../../../../dev/aya/bpf/aya-bpf-cty" }
#aya-bpf = { git = "https://github.com/nak3/aya", branch = "add-lwt" }
